2006-01-25  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c: (main):

	Don't leak the option context.

2006-01-25  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-topic-action.c: (drag_data_received_cb),
	(create_tool_item), (ephy_topic_action_sync_label), (get_popup),
	(erase_popup), (child_changed_cb), (child_removed_cb),
	(menu_init_cb), (button_deactivate_cb), (button_toggled_cb),
	(button_release_cb), (button_press_cb), (connect_proxy),
	(ephy_topic_action_updated), (ephy_topic_action_get_topic),
	(ephy_topic_action_set_topic), (ephy_topic_action_set_property),
	(ephy_topic_action_get_property), (ephy_topic_action_init),
	(ephy_topic_action_get_type), (ephy_topic_action_new):

	Small cleanups.

2006-01-25  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-gecko-1-8.js:
	* embed/mozilla/mozilla-embed-single.cpp:

	Set the "browser.display.use_system_colors" pref on gecko 1.8,
	instead of monitoring the theme ourself.

2006-01-25  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/prefs-dialog.glade:

	Don't show the CSS box by default; we show it from code
	only when CSS is supported.

2006-01-25  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-mozilla.js:

	On suite, set wallet.caveat to false.

2006-01-25  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmark-action-group.c:
	* src/bookmarks/ephy-bookmark-action-group.h:
	* src/bookmarks/ephy-bookmark-factory-action.c:
	* src/bookmarks/ephy-bookmark-factory-action.h:
	* src/bookmarks/ephy-bookmarks-ui.c:
	* src/bookmarks/ephy-bookmarks-ui.h:
	* src/bookmarks/ephy-nodes-cover.c:
	* src/bookmarks/ephy-nodes-cover.h:
	* src/bookmarks/ephy-open-tabs-action.c:
	* src/bookmarks/ephy-open-tabs-action.h:
	* src/bookmarks/ephy-related-action.c:
	* src/bookmarks/ephy-topic-action-group.c:
	* src/bookmarks/ephy-topic-action-group.h:
	* src/bookmarks/ephy-topic-factory-action.c:
	* src/bookmarks/ephy-topics-palette.c:

	Add cvs version markers.
