@@ -1,3 +1,10 @@
+2006-01-22  Peter Harvey  <peter.a.harvey@gmail.com>
+
+	* src/bookmarks/ephy-bookmarks-ui.c
+	
+	Reverted change which made 'add bookmark' and 'edit bookmark'
+	use-cases have exactly the same dialog.
+
 2006-01-25  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/ephy-main.c: (main):
